--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "feedback-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
+    "concurrently": "^7.1.0",
     "cra-template": "1.1.3",
     "framer-motion": "^4.1.17",
     "react": "^18.0.0",
@@ -16,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 5000",
+    "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
